tdf#104317 RTF import: avoid setting CustomShapeGeometry on a line shape

Even Santa Claus knows it has no such property.

(cherry picked from commit c2e070d9a8192e7aceed64a63c716c7317843747)

Change-Id: I46e27868c62fabd10c6447956e40e55962ee284b
Reviewed-on: https://gerrit.libreoffice.org/31723
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>